--- a/templates/tests/test-connection.yaml
+++ b/templates/tests/test-connection.yaml
@@ -1,15 +1,18 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "app.fullname" . }}-test-connection"
+  name: "{{ include "my-app.fullname" . }}-test-connection"
   labels:
-    {{- include "app.labels" . | nindent 4 }}
+    {{- include "my-app.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
   containers:
     - name: wget
       image: busybox
-      command: ['wget']
-      args: ['{{ include "app.fullname" . }}:{{ .Values.service.port }}']
+      command: ['sh', '-c']
+      args:
+        - >
+          wget --spider --timeout=1 {{ include "my-app.fullname" . }}-frontend:{{ .Values.frontend.port | default 3000 }} &&
+          wget --spider --timeout=1 {{ include "my-app.fullname" . }}-backend:{{ .Values.backend.port | default 3001 }}
   restartPolicy: Never
