--- a/templates/network-policy.yaml
+++ b/templates/network-policy.yaml
@@ -2,21 +2,23 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: allow-frontend-backend-mysql
-spec:
-  podSelector: {}  # Applies to all pods in the namespace
-
-ingress:
-  - from:
-      - podSelector:
-          matchLabels:
-            app: frontend
-    ports:
-      - protocol: TCP
-        port: 8080  # Backend service port
-  - from:
-      - podSelector:
-          matchLabels:
-            app: backend
-    ports:
-      - protocol: TCP
-        port: 3306  # MySQL service port
+  namespace: devops-challenge
+spec:                             # Start of the `spec` section
+  podSelector: {}                 # Apply policy to all Pods in this namespace
+  policyTypes:
+    - Ingress                     # Only govern incoming traffic
+  ingress:                        # Start of ingress rules
+    - from:
+        - podSelector:
+            matchLabels:
+              app: frontend       # Allow traffic from Pods labeled "app: frontend"
+      ports:
+        - protocol: TCP
+          port: 8080             # Allow traffic to port 8080
+    - from:
+        - podSelector:
+            matchLabels:
+              app: backend        # Allow traffic from Pods labeled "app: backend"
+      ports:
+        - protocol: TCP
+          port: 3306             # Allow traffic to port 3306
