--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -5,8 +5,8 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - port: 8080         # Exposing backend service on port 8081
-      targetPort: 8080     # Backend listens on port 8081
+    - port: 8080
+      targetPort: 8080
   selector:
     app: backend
 
@@ -19,8 +19,8 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - port: 8081         # Exposing frontend service on port 8080
-      targetPort: 8081     # React frontend listens on port 8080
+    - port: 8081
+      targetPort: 8081
   selector:
     app: frontend
 
@@ -33,7 +33,7 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - port: 3306          # Exposing MySQL service on port 3306 (standard MySQL port)
-      targetPort: 3306     # MySQL listens on port 3306
+    - port: 3306
+      targetPort: 3306
   selector:
     app: mysql
